kotlin/semlang-parser/src/test/semlang/validatorTests/fail/dataEqualsInvalidType2.sem
struct Foo {
  bar: (Integer) -> Boolean
}

// Structs containing function types are not data types
function areStructsEqual(foo1: Foo, foo2: Foo): Boolean {
  Data.equals<Foo>(foo1, foo2)
}
